1.0.1
Added "restartwm" to messages.
Fixes for apps using those god awful client side decorations.

1.0.0
Minor gui fixes.
Fixed frame extents prop.
Made frame move more responsive.
Added _NET_FRAME_EXTENTS prop to windodows.
Fixed visual glitch when not using theme.
Fixed startup with no extant windows.
Fixed stacking.
Fixed changing themes.
Fixed reload modifier keys.
Done dragging window off left/right edge of screen changes current desktop.
Fixed 'ESC+MOVEKEYS' getting wrong key.
Fixed 'above/Below' fom window menu button.
Added 'ESC+MOVEKEYS' to un-fullscreen, ( MOVEKEYS are mod keys to be used, set in lfswm2Class.h, to be moved to prefs ).
Fixed hide controls in fullscreen.
Fixed maximize to correct monitor.
Done swtich desktops via scroll wheel.
Fixed flicker when window first opens.
If prop "_NET_CURRENT_DESKTOP" is available on startup select that desktop.
Fixed getting bottom bar size from prefs.
Fixed window losing focus.
Added force dockwindows to top, bottom or set by app to prefs.
Fixed hole in titlebar when shaded.
Fixed dock windows being on top.
Minor menu gui fix.
Fixed segfault with certain windows like xephyr.
Version bump.

0.2.6
Fixed restacking.
Code clean.
Fixed control position/sizes when changing themes on the fly.
Fixed segfault when switching resize modes.
Added "reloadtheme" to messaging.
Fixed positioning of wm menu popup.
Can now set resize mode for individual windows via wm menu.
Done window menu.
Done window controls rollover/pressed.
Started window manager menu.
Theming done ( mostly ).
Fixed drag resizeing glitches.
Added install default prefs file on 1st run if not exists, ( ~/.config/LFS/lfswm2.rc ).
Fixed memory leak.
Fixed various gui glitches.
Fixed dragsize from widget.
Code clean.
Started theming.
0.2.5
Fixed resize flicker.
Fixed memory leaks.
Added more cli options.
Resize window tweaks.
Fixed title position.
Fixd about boxes being reshown.
Fixed moving windows when starting up.
Fixed menus AGAIN!
Done no placement.